<resources>
    <string name="app_name">My Application</string>
    <string name="bouton_help">\?</string>
    <string name="bouton_dialog">OK</string>
    <string name="bouton_menu">Menu</string>
    <string name="bouton_regles">Regles</string>
    <string name="bouton_scores">Scores</string>
    <string name="bouton_conseils">Conseils</string>
    <string name="dialog_help_menu">nya</string>
    <string name="bouton_compte">Mon compte</string>
    <string name="bouton_options">Options</string>
    <string name="bouton_billardFrancais">Billard Français</string>
    <string name="bouton_billardAmericain">Billard Américain</string>
    <string name="bouton_poolAnglais">Pool Anglais</string>
    <string name="bouton_snooker">Snooker</string>
    <string name="dialog_help_regles">nya_regles</string>
    <string name="dialog_help_scores">Scroll the scores tab</string>
    <string name="barre_recherche">Nom de la partie</string>
    <string name="grilleBDD">Ici tableau BDD</string>
    <string name="bouton_nouveau">+</string>
    <string name="bouton_recherche">Loupe</string>
    <string name="bouton_selectFilters">Flèche bas</string>
    <string name="exemple_string">Blablabalba</string>
    <string name="nom_partie">Nom partie</string>
    <string name="type_partie">Type partie</string>
    <string name="date_partie">Date partie</string>
    <string name="tmp_conseils">En travaux</string>
    <string name="dialog_help_conseils">Cf la page</string>
    <string name="tmp_options">Vous avez 0 choix pour le moment D</string>
    <string name="dialog_help_options">ZE-RO</string>
    <string name="tmp_seConnecter">En travaux D</string>
    <string name="dialog_help_seConnecter">Cf la page (</string>
    <string name="I_Billard_anglais">Billard anglais</string>
    <string name="I_A_8Pool_blackBall">Règles du 8Pool ou BlackBall</string>
    <string name="I_A_Introduction">\tLe jeu se déroulera sur un Billard rectangulaire à 6 « Poches » avec un nombre de 14 billes de couleur, une bille noire numéro 8 et une bille blanche. Les 14 billes de couleur sont séparées en 2 groupes : un groupe de 7 billes rouges, un groupe de 7 billes jaunes.</string>
    <string name="I_A_1_But_du_jeu">But du jeu</string>
    <string name="I_A_1_But_du_jeu_1">\tLa partie sera gagnée par le joueur ou l’équipe qui, après avoir empoché les billes de son groupe (couleur), empochera légalement la numéro 8, de manière directe ou non, dans l’une des 6 poches. Il est permis d’empocher une ou plusieurs billes de son groupe lors d’un même tir, mais la noire doit être empochée toute seule.</string>
    <string name="I_A_1_But_du_jeu_2">\tLe joueur qui débutera la partie sera déterminé par un tirage au sort. Le gagnant du tirage pourra ouvrir la partie ou bien imposer à son adversaire de la faire. A la partie suivante, le joueur n´ayant pas cassé cassera à son tour.</string>
    <string name="I_A_2_Départ_du_jeu_casse">Départ du jeu « Casse »</string>
    <string name="I_A_2_Départ_du_jeu_casse_1">\tLes billes sont rassemblées en triangle et disposées de façon telle que la noire soit placée sur l’intersection des 2 diagonales. Le joueur qui débutera la partie sera désigné par tirage au sort. Le gagnant du tirage pourra effectuer la casse ou l’imposer à son adversaire. Dans le cadre d’un match, en individuels, en plusieurs manches, la fonction sera inversée à la partie suivante. Dans le cadre d’une rencontre par équipes, en 15 fois une manche sèche, l’attribution de la « Casse » ne sera pas modifiée. Si un joueur refuse la « Casse », au match suivant le joueur de l’équipe adverse aura la possibilité de la conserver. Le joueur « cassant » pourra placer la bille blanche où bon lui semblera, derrière la ligne. Après dépôt de la bille blanche sur le tapis, il lui sera possible de la déplacer, à sa convenance, sauf par contact avec le procédé.</string>
    <string name="I_A_2_Départ_du_jeu_casse_2_list1">\tLa casse est acceptée si :</string>
    <string name="I_A_2_Départ_du_jeu_casse_2_list1_item1">\t- le joueur empoche au minimum une bille,</string>
    <string name="I_A_2_Départ_du_jeu_casse_2_list1_item2">\t- ou si 4 billes de couleur au moins touchent une bande.</string>
    <string name="I_A_2_Départ_du_jeu_casse_2_list2">\tDans le cas contraire :</string>
    <string name="I_A_2_Départ_du_jeu_casse_2_list2_item1">\t- les billes sont remises en triangle. L’autre joueur recasse (même règle) avec le bénéfice de 2 visites. Si la bille noire est empochée lors de la casse, même s’il y a faute par ailleurs, les billes seront remises en triangle et le même joueur recassera.</string>
    <string name="I_A_2_Départ_du_jeu_casse_2_list2_item2">\t- si la bille blanche est empochée lors de la casse, (casse acceptée), la main passe à l’adversaire qui devra placer la bille blanche derrière la ligne. Il ne bénéficiera que d’une seule visite.</string>
    <string name="I_A_2_Départ_du_jeu_casse_2_list2_item3">\t- si la bille blanche quitte la surface de jeu, (autrement qu’en étant empochée), et reste hors de la surface de jeu (n’y revenant pas d’elle-même), il y a faute standard.</string>
    <string name="I_A_2_Départ_du_jeu_casse_2_list2_item4">\t- si la bille blanche, ou une bille de couleur, ou la 8 noire, s’immobilise sur le haut de la bande (donc, hors surface de jeu), il y a faute standard.</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception">\tEXCEPTION :</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1">\tA la « Casse », de même qu’en cours de partie, si la bille blanche, ou une bille de couleur, ou la 8 noire, quitte la surface de jeu en s’élevant, vient rouler sur l’arête ou le haut de la bande (uniquement), puis retombe et revient s’immobiliser sur la surface de jeu, il n’y a pas faute.</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list">\tDans ce cas :</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item1">\t- si à la « Casse » : une bille de couleur est empochée, ou, si 3 autres billes ont touché la bande, la « Casse » est acceptée.</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list1">\t- si cette bille retombe, revient sur la surface de jeu et est empochée, et s’il s’agit d’une bille :</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list1_item1">\t- de couleur, le joueur, en contrôle, garde la main.</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list1_item2">\t- blanche, la main passe à l’adversaire qui devra placer la bille blanche derrière la ligne. Il ne bénéficiera que d’une seule visite.</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list1_item3">\t- 8 noire, la partie est à refaire.</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list2">\t- si, en cours de partie : cette bille est empochée, et s’il s’agit d’une bille :</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list2_item1">\t- de couleur, le joueur, en contrôle, garde la main.</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list2_item2">\t- blanche, le joueur commet une faute standard.</string>
    <string name="I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list2_item3">\t- 8 noire, le joueur perd la partie.</string>
    <string name="I_A_3_Choix_des_couleurs">Choix des couleurs</string>
    <string name="I_A_3_Choix_des_couleurs_1">\tAprès que le premier joueur ait effectué une « Casse », acceptée, sans qu’aucune bille n’ait été empochée, la table est déclarée « LIBRE ». Le joueur suivant a le choix de la couleur : il peut donc jouer n’importe quel groupe de billes, SANS L’ANNONCER.</string>
    <string name="I_A_3_Choix_des_couleurs_2">\tA la « Casse », ou après la « Casse » la main passant mais la table restant en situation « LIBRE », sur un tir « FAUTE » du joueur en contrôle, empochant, lors de ce tir, une bille de couleur la table est toujours « LIBRE ». Le joueur suivant a le choix de la couleur : il peut donc jouer n’importe quel groupe de billes, en 2 « VISITES » SANS L’ANNONCER.</string>
    <string name="I_A_3_Choix_des_couleurs_3">\tQuand, à la « Casse », le joueur a empoché une ou plusieurs billes de groupes différents, il est dans l’obligation de désigner son choix de couleur. Quel que soit le résultat de son tir suivant (bille empochée ou non empochée) son choix est définitif.</string>
    <string name="I_A_3_Choix_des_couleurs_4_list">\tQuand, à la « Casse », ou, sur un tir en choix de couleur, le joueur a empoché une ou plusieurs billes du même groupe, il annonce à l’arbitre :</string>
    <string name="I_A_3_Choix_des_couleurs_4_list_item1">\t- ou, son désir de continuer sur ce groupe, et, dans ce cas, quel que soit le résultat de son tir suivant (bille empochée ou non empochée) son choix sera définitif.</string>
    <string name="I_A_3_Choix_des_couleurs_4_list_item2">\t- ou, son désir de jouer sur l’autre groupe. Le joueur est, alors, dans l’obligation d’empocher au moins une bille du groupe qu’il vient de désigner. Si aucune bille de ce groupe n’est empochée, l’adversaire prend la main en table « LIBRE ».</string>
    <string name="I_A_3_Choix_des_couleurs_4_list_item3">\tEffectuer un tir en oubliant de désigner à l’arbitre, à haute et intelligible voix, son choix de couleur constitue une faute (standard).</string>
    <string name="I_A_4_Tir_reglementaire">Tir reglementaire</string>
    <string name="I_A_4_Tir_reglementaire_1_list">\tAprès la « Casse », sur chaque tir, la bille blanche doit d’abord toucher une bille du groupe du joueur en contrôle et ensuite le joueur devra :</string>
    <string name="I_A_4_Tir_reglementaire_1_list_item1">\t- soit empocher une bille de son groupe</string>
    <string name="I_A_4_Tir_reglementaire_1_list_item2">\t- soit faire en sorte qu’une bille (rouge, jaune ou noire) ou la bille blanche aille toucher une bande.</string>
    <string name="I_A_4_Tir_reglementaire_2">\tSi le joueur tire une bille de son groupe, ou la 8 Noire, ou une bille désignée après FAUTE snooker, en contact avec la bande (collée à la bande) et, qu’après ce tir, aucune bille (ni la bille tirée, ni la blanche, ni la 8 Noire, ni une bille de son groupe ou de l’autre groupe) ne touche bande, le tir n’est pas réglementaire.</string>
    <string name="I_A_4_Tir_reglementaire_3">\tAprès tir, si la bille, qui était collée bande, se décolle légèrement et revient toucher au même point la bande sans qu’une autre bille fasse bande, le tir n’est pas réglementaire.</string>
    <string name="I_A_4_Tir_reglementaire_4">\tSi, avant le tir, la blanche et la bille de couleur à tirer touchent toutes les deux la même bande, un tir coinçant, simplement, l’une et l’autre des billes contre cette même bande, n’est pas réglementaire.</string>
    <string name="I_A_4_Tir_reglementaire_5">\tSi le joueur effectue un tir non réglementaire, il y a « FAUTE ». L’adversaire reprend le contrôle de la table et bénéficie de deux « VISITES ».</string>
    <string name="I_A_4_Tir_reglementaire_6_list">\tPar contre, dans les cas de figures, ci-dessus cités, si, après tir, la bille est empochée sans que la blanche ou aucune autre bille ne fasse contact bande, le tir est réglementaire. Le joueur conserve la main jusqu’à ce que lors d’un tir, il n’empoche pas de bille de son groupe ou qu’il commette une « FAUTE ».</string>
    <string name="I_A_5_Etat_Snook">Snooker (état de Snook)</string>
    <string name="I_A_5_Etat_Snook_list">Un joueur est en « Etat de Snook » :</string>
    <string name="I_A_5_Etat_Snook_list_item1">\t- s’il ne peut jouer aucune bille de son groupe, en ligne droite, du côté droit de cette bille et du côté gauche de cette bille, aussi finement soit-il.</string>
</resources>