<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#007300"
    tools:context="com.incoherentglitch.mybillardassistant.ReglesAnglais">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/I_A_8Pool_blackBall"/>
        <Button
            android:id="@+id/magic_btn_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Introduction"/>
        <LinearLayout
            android:id="@+id/magic_layout_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/I_A_Introduction"
                android:orientation="vertical" />
        </LinearLayout>


        <Button
            android:id="@+id/magic_btn_but_du_jeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/I_A_1_But_du_jeu"/>
        <LinearLayout
            android:id="@+id/magic_layout_but_du_jeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_1_But_du_jeu_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_1_But_du_jeu_2"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/magic_btn_depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/I_A_2_Départ_du_jeu_casse"/>
        <LinearLayout
            android:id="@+id/magic_layout_depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_2_list1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_2_list1_item1"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_2_list1_item2"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_2_list2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_2_list2_item1"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_2_list2_item2"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_2_list2_item3"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_2_list2_item4"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item1"
                    android:layout_marginLeft="40dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list1"
                    android:layout_marginLeft="40dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list1_item1"
                    android:layout_marginLeft="60dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list1_item2"
                    android:layout_marginLeft="60dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list1_item3"
                    android:layout_marginLeft="60dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list2"
                    android:layout_marginLeft="40dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list2_item1"
                    android:layout_marginLeft="60dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list2_item2"
                    android:layout_marginLeft="60dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/I_A_2_Départ_du_jeu_casse_3_exception_1_list_item2_list2_item3"
                    android:layout_marginLeft="60dp"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/magic_btn_couleur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/I_A_3_Choix_des_couleurs"/>
        <LinearLayout
            android:id="@+id/magic_layout_couleur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/I_A_3_Choix_des_couleurs_1"
                android:orientation="vertical" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>