<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fond_score">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/menu_central"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <Button
            android:id="@+id/bouton_menu_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/bouton_menu" />

        <LinearLayout
            android:id="@+id/layout_recherche"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bouton_menu_scores"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/bouton_nouveau"
                android:src="@drawable/mini_croix"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/bouton_nouveau"/>


            <EditText
                android:id="@+id/barre_recherche"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginTop="2dp"
                android:hint="@string/barre_recherche"
                android:lines="1"
                android:gravity="center"
                android:background="#FFFFFF"
                android:layout_centerVertical="true" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <ImageButton
                android:id="@+id/bouton_recherche"
                android:src="@drawable/mini_loupe"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/bouton_recherche" />

            <ImageButton
                android:id="@+id/bouton_selectFilters"
                android:src="@drawable/mini_triangle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:text="@string/bouton_selectFilters"/>
        </LinearLayout>

        <ScrollView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_below="@id/layout_recherche"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TableLayout
                android:id="@+id/tableau_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TableLayout>
        </ScrollView>

    </RelativeLayout>

    <Button
        android:id="@+id/bouton_help_scores"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/bouton_help"/>
</RelativeLayout>