<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fond_mainmenu"

    tools:context="com.incoherentglitch.mybillardassistant.Menu">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/menu_central"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:id="@+id/bouton_regles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_regles"
            />

        <Button
            android:id="@+id/bouton_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bouton_regles"
            android:text="@string/bouton_scores"
            />

        <Button
            android:id="@+id/bouton_conseils"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bouton_scores"
            android:text="@string/bouton_conseils"
            />

    </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/menu_boutons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <ImageView
            android:id="@+id/bouton_compte"
            android:src="@drawable/compte"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/bouton_compte"
            style="@android:style/Widget.Button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp" />

        <ImageView
            android:id="@+id/bouton_options"
            android:src="@drawable/option"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="0dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/bouton_options"
            style="@android:style/Widget.Button"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="11dp"
            android:layout_marginEnd="11dp" />
    </RelativeLayout>
</RelativeLayout>
